tests/fail/elaboration/boolean-literal/type-mismatch.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/boolean-literal/type-mismatch.fathom:3:1
  │
3 │ true : Void
  │ ^^^^ type mismatch, expected `Void`, found `Bool`
  │
  = expected `Void`
       found `Bool`

'''
